<resources>
    <string name="app_name">Home</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="login_here">Login Here</string>
    <string name="have_already_an_account">Have already an account?</string>
    <string name="register_now">Register Now</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="update_house">Update</string>
    <string name="update_feedback">Update</string>
</resources>
