<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/house_back"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Password"
        android:textSize="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_marginLeft="80dp"
        android:text="Remeber Me"
        android:textSize="18sp" />

        <TextView
            android:id="@+id/txtfogt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorLogin"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Login"
        android:background="@drawable/btn_rounded_corner"
        android:cursorVisible="true"
        android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:text="@string/not_registered"/>

            <TextView
                android:id="@+id/reg"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="#CD2E46"
                android:pointerIcon="hand"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:textSize="20dp"
                android:text="@string/register"
                android:paddingLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>