<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/house_back"
    android:orientation="vertical"
    tools:context=".Register">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
            android:id="@+id/editText3"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:hint="User Name"
            android:inputType="textPersonName" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_mail_black_24dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText6"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:background="#ffffff"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Phone No"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText7"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:background="#ffffff"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText8"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:background="#ffffff"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

    </LinearLayout>

        <Button
            android:id="@+id/btnregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/register_now"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_already_an_account"
            android:textSize="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/txtlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textColor="@color/colorLogin"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>